Multi button editing is unreliable in RGB(A) selector widgets #39537

Closed
opened 2014-04-01 04:42:58 +02:00 by gandalf3 · 11 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: 19e627c

Short description of error
Click+dragging down to select multiple channels in a color selector widget will abort if the mouse is moved to the side at all, in which case horizontal sliding takes over right away.

Note that if you can manage to move your mouse down perfectly without going side to side it works.

Exact steps for others to reproduce the error

  1. Click on a color swatch
  2. Click and drag the red channel slider downwards, making sure to move your mouse sideways a very tiny amount.
  3. Release LMB
  4. Keyboard entry cursor will not appear (non-keyboard input (sliding) seems to work fine)
**System Information** Archlinux GTX 460 **Blender Version** Broken: 19e627c **Short description of error** Click+dragging down to select multiple channels in a color selector widget will abort if the mouse is moved to the side at all, in which case horizontal sliding takes over right away. Note that if you can manage to move your mouse down perfectly without going side to side it works. **Exact steps for others to reproduce the error** 1. Click on a color swatch 2. Click and drag the red channel slider downwards, making sure to move your mouse sideways a very tiny amount. 3. Release LMB 4. Keyboard entry cursor will not appear (non-keyboard input (sliding) seems to work fine)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Author
Member

Actually this seems to be happening everywhere, though it worked fine in 2.70.

Actually this seems to be happening everywhere, though it worked fine in 2.70.
Campbell Barton self-assigned this 2014-04-01 10:13:55 +02:00

Confirmed, checking...

Confirmed, checking...
Author
Member

My bad, the same issue is in 2.70 as well.

My bad, the same issue is in 2.70 as well.

Hrm. in fact the keyboard input works here.

The issue I had was with negative colors. but this is in fact unrelated to button sliding.

Hrm. in fact the keyboard input works here. The issue I had was with negative colors. but this is in fact unrelated to button sliding.
Author
Member

Here's a gif of what is happening:

examp357.gif

Here's a gif of what is happening: ![examp357.gif](https://archive.blender.org/developer/F83653/examp357.gif)

This issue was referenced by blender/blender-addons-contrib@fb25a86f43

This issue was referenced by blender/blender-addons-contrib@fb25a86f43435e3eb60611cb8a5d3daefa09f21b

This issue was referenced by fb25a86f43

This issue was referenced by fb25a86f43435e3eb60611cb8a5d3daefa09f21b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fb25a86f43.

Closed by commit fb25a86f43.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39537
No description provided.