Fix T39537: Multi button editing is unreliable